snaplogger (1.0.45.0~bionic) bionic; urgency=high

  * Added support for sending exceptions to the logs with `... << e ...`.
  * Added tests to verify this exception support.
  * Fixed a couple of tests that were not yet updated.
  * Tested the stringstream support (`... << ss << ...`).
  * Added "components" as a variable we can include in the format.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 01 Jul 2022 22:27:43 -0700

snaplogger (1.0.44.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 20 May 2022 16:44:53 -0700

snaplogger (1.0.44.0~bionic) bionic; urgency=high

  * Load snaplogger plugins if any are found.
  * Added the `--logger-plugin-paths` option.
  * Added variable APPENDER_FACTORY_DEBUG to see when appenders get loaded.
  * Added the `--list-appenders` command.
  * Added a function to change the timestamp.
  * Fixed the "no-repeat" name, had to use the `no_repeat` variable.
  * Added support to increase the current severity temporarily.
  * Added new sevevirity levels (noisy, todo, exception, severe, configuration).
  * Added send_stack_trace() and SNAP_LOG_SEND_WITH_STACK_TRACE(e).
  * Added set the `--except-collect-stack` command line option.
  * Added the "exception" severity level for the stack trace lines.
  * Added a "not implemented" component.
  * Added some documentation.
  * Cleaned up the cmake.
  * Fixed the compat to v10.
  * Various other cleanups.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 07 Mar 2022 17:51:46 -0800

snaplogger (1.0.43.0~bionic) bionic; urgency=high

  * Added the Environment Variable Intro.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 21:15:03 -0800

snaplogger (1.0.42.0~bionic) bionic; urgency=high

  * Added function to allow stringstream's to be logged as is.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 16 Feb 2022 10:57:02 -0800

snaplogger (1.0.41.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.
